Fix MethodArgumentNotValidException handler to retrieve first field error message using index